@@ -297,3 +297,6 @@ CB_CONFIG_SUPPORT (cb_record_delim_with_fixed_recs, "record-delim-with-fixed-rec
 
 CB_CONFIG_SUPPORT (cb_missing_statement, "missing-statement",
 	_("missing statement (e.g. empty IF / PERFORM)"))
+
+CB_CONFIG_SUPPORT (cb_zero_length_lit, "zero-length-literals",
+	_("zero-length literals, e.g. '' and \"\""))
