@@ -225,6 +225,7 @@ record-delimiter:			ignore
 sequential-delimiters:			unconformable
 record-delim-with-fixed-recs:		ok
 missing-statement:			warning
+zero-length-literals:			unconformable # not verified yet
 
 
 # use fixed word list, synonyms and exceptions specified there
