@@ -221,6 +221,7 @@ record-delimiter:			ok
 sequential-delimiters:			ok
 record-delim-with-fixed-recs:		unconformable
 missing-statement:			error
+zero-length-literals:			ok
 
 
 # use fixed word list, synonyms and exceptions specified there
