@@ -221,6 +221,7 @@ record-delimiter:			ok
 sequential-delimiters:			ok
 record-delim-with-fixed-recs:		unconformable
 missing-statement:			error
+zero-length-literals:			unconformable
 
 # obsolete in COBOL85 and currently not available as dialect features:
 # 1: All literal with numeric or numeric edited item
