@@ -230,6 +230,7 @@ record-delimiter:			ok
 sequential-delimiters:			ok
 record-delim-with-fixed-recs:		ok
 missing-statement:			error
+zero-length-literals:			ok
 
 
 # use complete word list; synonyms and exceptions are specified below
